--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,7 @@
 	<h1>@tasks.size task(s)</h1>
 	<ul>
 		@tasks.map {task =>
-		<li>
+		<li style = "list-style: none">
 				@task.label
 				@form(routes.Application.deleteTask(task.id)) {
 				<input type="submit" value="Delete">
@@ -17,7 +17,7 @@
 	</ul>
 	<h2>Add a new task</h2>
 	@form(routes.Application.newTask) {
-	@inputText(taskForm("label"))
+	@inputText(taskForm("label"), '_label -> "")
 	<input type="submit" value="Create">
 	}
 }
